# easyPaste

./: .gitignore  CMakeLists.txt  LICENSE  README.md
src/: main.cpp
tray/: CMakeLists.txt
tray/include/: tray.h
tray/src/: tray_darwin.m  tray_linux.c  tray_windows.c
utils/: CMakeLists.txt
utils/include/: utils.h
utils/src/: utils_darwin.cpp  utils_linux.cpp  utils_windows.cpp
